fix : java 버전에 따른List 함수 충돌 수정, 통일