@@ -7,7 +7,6 @@ import com.ssafy.coffee.domain.result.entity.Result;
 import com.ssafy.coffee.domain.result.entity.Sequence;
 import com.ssafy.coffee.domain.result.repository.ResultRepository;
 import com.ssafy.coffee.domain.result.repository.SequenceRepository;
-import com.ssafy.coffee.domain.roasting.entity.Roasting;
 import com.ssafy.coffee.domain.roasting.repository.RoastingRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
@@ -24,8 +23,9 @@ public class ResultService {
     private final RoastingRepository roastingRepository;
     private final BeanRepository beanRepository;
     private final SequenceRepository sequenceRepository;
+
     @Transactional
-    public Result insertEmptyResult(long memberIndex){
+    public Result insertEmptyResult(long memberIndex) {
         Member member = memberRepository.findByIndexAndIsDeletedFalse(memberIndex)
                 .orElseThrow(() -> new EntityNotFoundException("Member not found with index: " + memberIndex));
 
@@ -38,15 +38,16 @@ public class ResultService {
                 .build());
         return result;
     }
+
     @Transactional
-    public Result updateEmptyResult(long resultIndex){
+    public Result updateEmptyResult(long resultIndex) {
         Result result = resultRepository.findByIndex(resultIndex)
                 .orElseThrow(() -> new EntityNotFoundException("Result not found with index: " + resultIndex));
-        List <Sequence> sequenceList = sequenceRepository.findAllByResultIndex(resultIndex);
+        List<Sequence> sequenceList = sequenceRepository.findAllByResultIndex(resultIndex);
         int resultFlawCnt = 0;
-        for(Sequence s: sequenceList)
-            resultFlawCnt +=s.getFlaw();
-        result.setNormalBeanCount(sequenceList.getLast().getNormal());
+        for (Sequence s : sequenceList)
+            resultFlawCnt += s.getFlaw();
+        result.setNormalBeanCount(sequenceList.get(sequenceList.size() - 1).getNormal());
         result.setFlawBeanCount(resultFlawCnt);
         return result;
     }
